--- a/scss/components/_home.scss
+++ b/scss/components/_home.scss
@@ -337,5 +337,9 @@ $spacer: 1rem;
     }
 }
 
-
+@include media-breakpoint-only(xs) {
+    .popular-sections-block {
+        gap: 0;
+    }
+}
 
